Subject in E-mail hinzugefuegt

--- a/hypertext-linking-uebung.html
+++ b/hypertext-linking-uebung.html
@@ -17,7 +17,7 @@
 
     <br>
 
-    <a href="mailto:irgendeine@e-mail.de">Contact me !</a>
+    <a href="mailto:irgendeine@e-mail.de?subject=Allgemeine Anfrage">Contact me !</a>
 </body>
 
 </html>
